# freqtrade-rs

./: .env.example  .rustfmt-ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  DEVELOPMENT.md  DEVELOPMENT_CN.md  DOCUMENTATION_ANALYSIS_REPORT.md  FIX_REPOSITORY_RS.md  ISSUES_TRACKING.md  MIGRATION_PLAN.md  MIGRATION_PLAN_CN.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_REPORT.md  PHASE2_MIGRATION_PLAN.md  PROJECT_ROADMAP.md  README.md  RISK_MODULE_SUMMARY.md  STATUS_REPORT.md  TEST_MIGRATION.md  TEST_MIGRATION_COMPLETE.md  UI_INTEGRATION_GUIDE.md  fix-font.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: Cargo.toml  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  risk_commands.rs  types.rs
src-tauri/src/backtest/: mod.rs
src-tauri/src/bot/: mod.rs
src-tauri/src/bot/tests/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/exchange/: binance.rs  mod.rs  traits.rs  websocket.rs
src-tauri/src/optimize/: hyperopt.rs  loss_functions.rs  mod.rs  optimizer.rs  space.rs
src-tauri/src/persistence/: mod.rs  recreate_needed.txt  repository.rs  repository_ref.rs  temp_repo_backup.rs
src-tauri/src/persistence/tests/: order_tests.rs  (+2 more)
src-tauri/src/risk/: cooldown.rs  low_profit.rs  manager.rs  max_drawdown.rs  mod.rs  protection.rs  stoploss_guard.rs
src-tauri/src/strategy/: indicators.rs  mod.rs  traits.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/trade/: fee.rs  mod.rs
src-tauri/src/utils/: mod.rs  retry.rs
(+52 files in other folders)
