[package]
name = "freqtrade-rs"
version = "0.1.0"
description = "A crypto trading bot built with Rust and Tauri"
authors = ["you"]
edition = "2024"

[lib]
name = "freqtrade_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }
async-trait = "0.1"
toml = "0.8"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
strum = { version = "0.26", features = ["derive"] }
url = "2.5"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.14"
visibility = "0.1.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
